--- a/projects/common/src/lib/shared/components/authentication/login/login.component.html
+++ b/projects/common/src/lib/shared/components/authentication/login/login.component.html
@@ -29,7 +29,7 @@
           <p>or</p>
           <mat-divider class="footer-divider-item" />
         </div>
-        <asl-google-signin-button type="standard" text="signin_with" size="large" [width]="400" />
+        <knc-resized-google-button/>
         <p class="footer-sign-up">
           Don't have an account?
           <b class="sign-up-text" role="button" (click)="onNavigateToSignup()">Sign up</b>
